# MathPhysicsEngineering

./: =2.8.7  README.md  pyproject.toml  setup.cfg
src/premarket_agent/: __init__.py  bootstrap.py  cli.py
src/premarket_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/premarket_agent/agents/: __init__.py  base.py  controller.py  execution.py  market_intel.py  monitoring.py  research.py  scoring.py
src/premarket_agent/config/: __init__.py  schemas.py  settings.py
src/premarket_agent/data/: __init__.py
src/premarket_agent/dev/: autorun.py
src/premarket_agent/gui/: dashboard.py
src/premarket_agent/models/: __init__.py  policy.py
src/premarket_agent/services/: __init__.py  analysis.py  broker.py  learning.py  market_data.py  news.py  portfolio.py  research.py  simulation.py
src/premarket_agent/ui/: __init__.py  __main__.py  dashboard.py
src/premarket_agent/utils/: __init__.py  logging.py  rate_limit.py
symbolic_diff_geom/: Riemannian_metric.py  charts.py  connections.py  vector_fields.py  visualization.py
symbolic_diff_geom/examples/: sphere.py
tests/: test_bootstrap.py
