[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "premarket-agent"
version = "0.1.0"
description = "Multi-agent system for premarket trending stock analysis, simulation, and automated trading."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Sergey", email = "sergey@example.com" }
]
dependencies = [
  "requests>=2.31.0",
  "pandas>=2.0.3,<2.1",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.2.1",
  "ib-insync>=0.9.86",
  "scikit-learn>=1.3.0",
  "numpy>=1.24.0",
  "python-dotenv>=1.0.0",
  "yfinance>=0.2.37",
  "beautifulsoup4>=4.12.2",
  "openai>=1.3.0",
  "langchain>=0.0.329",
  "typer>=0.9.0",
  "sqlalchemy>=2.0.22",
  "duckdb>=0.8.1",
  "httpx>=0.25.0",
  "tenacity>=8.2.3",
  "alpaca-trade-api>=3.0.0",
  "torch>=2.1.0",
  "transformers>=4.34.0",
  "rapidfuzz>=3.5.2",
  "tqdm>=4.66.1",
  "python-json-logger>=2.0.7",
  "rich>=13.6.0",
  "PySide6>=6.6.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.1",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.11.1",
  "black>=23.9.1",
  "ruff>=0.1.5",
  "mypy>=1.6.1",
  "ipykernel>=6.26.0",
  "types-python-dateutil>=2.8.19.14",
  "types-PyYAML>=6.0.12.11",
  "pre-commit>=3.4.0",
  "jupyter>=1.0.0",
  "nbformat>=5.9.2",
  "nbconvert>=7.10.0"
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "B", "PL", "UP"]
ignore = ["E203", "E266", "E501", "F401"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=premarket_agent --cov-report=term-missing"
testpaths = [
  "tests"
]


