[metadata]
name = premarket-agent
version = 0.1.0
description = Multi-agent premarket trading system with neural decision policy
long_description = file: README.md
long_description_content_type = text/markdown
author = Sergey
license = MIT

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >=3.8
install_requires =
    requests>=2.31.0
    pandas>=2.0.3,<2.1
    pydantic>=2.5.0
    pydantic-settings>=2.2.1
    ib-insync>=0.9.86
    scikit-learn>=1.3.0
    numpy>=1.24.0
    python-dotenv>=1.0.0
    yfinance>=0.2.37
    beautifulsoup4>=4.12.2
    openai>=1.3.0
    langchain>=0.0.329
    typer>=0.9.0
    sqlalchemy>=2.0.22
    duckdb>=0.8.1
    httpx>=0.25.0
    tenacity>=8.2.3
    alpaca-trade-api>=3.0.0
    torch>=2.1.0
    transformers>=4.34.0
    rapidfuzz>=3.5.2
    tqdm>=4.66.1
    python-json-logger>=2.0.7
    rich>=13.6.0
    PySide6>=6.6.1

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-asyncio>=0.21.1
    pytest-cov>=4.1.0
    pytest-mock>=3.11.1
    black>=23.9.1
    ruff>=0.1.5
    mypy>=1.6.1
    ipykernel>=6.26.0
    types-python-dateutil>=2.8.19.14
    types-PyYAML>=6.0.12.11
    pre-commit>=3.4.0
    jupyter>=1.0.0
    nbformat>=5.9.2
    nbconvert>=7.10.0

[options.packages.find]
where = src

